feature(Map): Added Map section

--- a/lang/es.json
+++ b/lang/es.json
@@ -49,5 +49,11 @@
         "settings": "Configuración",
         "profile": "Perfil",
         "dogs": "Mis Perros"
+    },
+    "dogs": {
+        "title": "Mis mascotas"
+    },
+    "map": {
+        "request": "Solicitar"
     }
 }
