fix(Styles): fixed react styles rules

--- a/lang/es.json
+++ b/lang/es.json
@@ -65,5 +65,9 @@
         "currency": "Moneda",
         "notification": "Notificaciones",
         "logout": "Salir"
-    }
+    },
+    "home": {
+        "title": "Noticias nuevas"
+    },
+    "pick": "Seleccione"
 }
